[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wslshot"
version = "0.0.12"
description = "Copy Windows screenshots into WSL for easy reuse."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Sébastien De Revière" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0,<9.0",
    "click-default-group>=1.2.4,<2.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scriv[toml]>=1.5.0",
]

[project.urls]
Documentation = "https://github.com/sderev/wslshot"
Issues = "https://github.com/sderev/wslshot/issues"
Changelog = "https://github.com/sderev/wslshot/blob/main/CHANGELOG.md"

[project.scripts]
wslshot = "wslshot.cli:wslshot"

[tool.setuptools]
packages = ["wslshot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
md_header_level = 2
output_file = "CHANGELOG.md"
fragment_directory = "changelog.d"
new_fragment_template = "file: changelog.d/templates/fragment.md.j2"
categories = [
    "Added",
    "Changed",
    "Deprecated",
    "Removed",
    "Fixed",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
